syntax = "proto3";

package scalar_types;

message ScalarTypes {
  int32 f_int32 = 1;
  int64 f_int64 = 2;
  uint32 f_uint32 = 3;
  uint64 f_uint64 = 4;
  sint32 f_sint32 = 5;
  sint64 f_sint64 = 6;
  fixed32 f_fixed32 = 7;
  fixed64 f_fixed64 = 8;
  sfixed32 f_sfixed32 = 9;
  sfixed64 f_sfixed64 = 10;
  float f_float = 11;
  double f_double = 12;
  bool f_bool = 13;
  string f_string = 14;
  bytes f_bytes = 15;
}
